--- a/Templates/.gitignore
+++ b/Templates/.gitignore
@@ -58,6 +58,51 @@ exclude
 #todo*
 vars
 
+#################################
+## From tutorial in GitHub
+#################################
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
+
+
 #########################
 # The following doesn't work because the dir is ignored already. Precedence is a thing here aswell 
 # !NoGood/
